src/test/deca/syntax/valid/test_println.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Affichage de la chaine de caractères "hello"
//
// Historique:
//    cree le 10/01/2022


{
        println("hello");
}