src/test/deca/syntax/invalid/depassement_float.deca
// Description:
//    test sur le dépassement sur la lecture d'un flottant
//
// Resultats: Erreur ligne 10 : dépassement de capacité
//
// Historique:
//    crée le 11/01/2022

{
	float A = 3.50293E+38;
   	println("hummmm");
}
